			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Support Unicode in windows open_shared_object/2, underlying
    load_foreign_library/1.  Maria Sergeeva.

  * FIXED: Support Unicode in Windows environment strings, setenv/2
    and getenv/2.  Maria Sergeeva.

  * FIXED: Bug#221: Create dynamic predicates with long UNICODE names.
    Holger Kanwischer.

================================
VERSION 5.6.21 (October 2, 2006)
================================

  * PORT: Bug#219: Bus error with gmp on linux/sparc.  Keri Harris.

  * FIXED: Bug#217: floor/1 and ceil/1 return wrong value for 1<<63.
    Marius Filip.

  * ADDED: call/7-11 as predicates.  Paulo Moura.

  * PORT: Bug#206: timezone trouble on FreeBSD.  With help from Matthew Condell
    and Darren Bane.

  * PORT: Bug#212: Paralel make.  Keri Harris.

  * FIXED: Bug#201: graphical tracer running out of local stack.  
    Robert Oschler.

  * FIXED: Avoid undefined pce_expansion:push_compile_operators/1 in
    Prolog stack utility.  Mike Elston.

  * MODIFIED: relative_to option of absolute_file_name/3 is considered a
    directory if the directory exists or ends in /.  Otherwise it is assumed
    to be a file.

===================================
VERSION 5.6.20 (September 18, 2006)
===================================

  * FIXED: between(N, infinite, X).  Matt Lilley.

===================================
VERSION 5.6.19 (September 11, 2006)
===================================

  * MODIFIED: More efficient DCG translation.  No longer produces 'C'/3
    calls.  'C'/3 has been moved to backcomp.pl

  * FIXED: Bug#205: support GNU-make when not named make.  Marc Espie.

  * FIXED: Bug 204: ** for rationals.  Mike Elston.

  * ADDED: Library heaps.pl.  Adapted by Markus Triska.
